# monitor-movie-show-releases

./: .gitignore  AUTHORS  ChangeLog  Makefile  README.md  pyproject.toml  setup.cfg
src/: config.py  main.py  monitor_movie_show_releases.py  sendmail.py  tmdb.py  util.py  version.py
