[build-system]
requires = ["setuptools", "wheel", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "monitor-movie-show-releases"
description = "Monitor future movie and TV show releases"
authors = [
	{ name = 'Sven "DrMcCoy" Hesse', email = "drmccoy@drmccoy.de" }
]
classifiers = [
	"Private :: Do No Upload",
	"License :: OSI Approved :: GNU Affero General Public License v3.0 or later (AGPL-3.0-or-later)"
]
requires-python = ">=3.12"
dependencies = [
	"dictdiffer",
	"requests",
	"xdg"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
	"types-setuptools",
	"isort",
	"autopep8",
	"flake8",
	"mypy",
	"pylint",
	"types-requests"
]

[project.scripts]
monitor-movie-show-releases = "main:main"

[tool.setuptools-git-versioning]
enabled = true
version_callback = "src.version:get_version"
